@@ -1,6 +1,6 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.196 2005/11/28 19:02:51 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.197 2005/11/28 21:48:03 agaffney Exp $
 
 *GLI-gtkfe-0.3 (27 Oct 2005)
 
@@ -8,6 +8,7 @@
   rename Client Config screen to Pre-install Config
   list currently loaded modules on the right side of the client config screen
   add scrollbar to module list
+  check 'Network already setup' if gentoo.org can be pinged
 
   27 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
   wrap text in log and output view
