@@ -1,9 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.503 2005/11/28 04:41:57 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.504 2005/11/28 21:48:02 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
+
+  28 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIUtility.py:
+  change ping count to 2
 
   27 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/templates/x86ArchitectureTemplate.py:
